--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,12 @@ body
 .container-fluid{
     padding: 0;
 }
-/* header */
 html{
     font-size: 15px;
 }
+
+
+/* header */
 .navbar{
     border-radius: 0;
     position: relative;
@@ -125,6 +127,9 @@ html{
 
 
 /* info-section starts */
+main {
+    margin-bottom: 80px;
+}
 main .info-1 h4{
     margin: 48px;
     font-weight: 600;
@@ -173,8 +178,6 @@ main .info-1 h1{
 .another-section{
     background-color: #f0f0f0;
     padding: 100px 0;
-    margin-top: 80px;
-    margin-bottom: 80px;
 }
 .another-section section{
     position: relative;
@@ -209,8 +212,8 @@ main .info-1 h1{
 }
 
 
-/* multi-img section */
-.multi-img h1{
+/* multi-img section starts here */
+/* .multi-img h1{
     color: orange;
     font-weight: 600;
 }
@@ -249,8 +252,8 @@ main .info-1 h1{
     color: orange;
     padding: 18px 38px;
     margin-bottom: 48px;
-}
-
+} */
+/* multi-img section ends here */
 
 /* two-section starts */
 .two-section{
@@ -280,8 +283,7 @@ main .info-1 h1{
     letter-spacing: 0.5px;
 }
 .two-section .right img{
-    width: 68%;
-    transform: scale(2.8) translate(128px, 68px);
+    width: 100%;
 }
 
 
@@ -344,7 +346,7 @@ main .info-1 h1{
     margin-bottom: 38px;
 }
 .clients-section img{
-    color: #000;
+    width: 100%;
 }
 
 
@@ -428,7 +430,7 @@ main .info-1 h1{
 
 
 /* media query */
-@media only screen and (max-width: 767px){
+@media only screen and (max-width: 768px) {
 
     html{
         font-size: 12px;
@@ -455,8 +457,8 @@ main .info-1 h1{
     .navbar .navbar-header{
         margin-right: 0;
     }
-    .navbar-header .navbar-brand{
-        margin-top: -48px;
+    .navbar-brand {
+        margin-top: -58px;
     }
     .navbar-brand img{
         width: 28%;
@@ -500,11 +502,6 @@ main .info-1 h1{
         margin-bottom: 28px;
     }
 
-    /* two-section starts */
-    .two-section .right{
-        display: none;
-    }
-
     /* clients-section starts */
     .clients-section img{
         width: 100%;
@@ -519,7 +516,14 @@ main .info-1 h1{
         margin-top: -18px;
     }
 }
-@media only screen and (max-width:546px){
+@media only screen and (max-width: 425px){
+
+    .navbar-brand {
+        margin-top: -40px;
+    }
+}
+
+@media (max-width: 375px) {
 
     
 }
